--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,37 @@
-name: Run Tests
+name: CI
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
 
 jobs:
-  test:
+  validate-python-code:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out code
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: "3.9"
 
-      - name: Install dependencies
+      - name: Install Dependencies
+        run: pip install flake8 pylint
+
+      - name: Run Flake8
+        run: flake8 generated_python/
+
+      - name: Run Pylint
+        run: pylint generated_python/
+
+      - name: Run Smoke Tests
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-
-      - name: Run tests
-        run: pytest
+          for file in generated_python/*.py; do
+            python -m py_compile "$file"
+          done
