--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         run: pip install flake8 pylint
 
       - name: Run Flake8
-        run: flake8 . --ignore=W191,E101 --max-line-length=100
+        run: flake8 . --ignore=W191,E101,E111,E401 --max-line-length=100
 
       - name: Run Pylint
         run: pylint $(git ls-files '*.py')
